# rust-web-app

./: Cargo.toml  README.md
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/pwd/: hmac_hasher.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs  scheme_03.rs
crates/libs/lib-auth/src/token/: mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs
crates/libs/lib-core/src/model/: error.rs  mod.rs  task.rs  user.rs
crates/libs/lib-core/src/model/store/: mod.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/: error.rs  lib.rs  params.rs  task_rpc.rs
crates/libs/lib-rpc/src/router/: from_resources.rs  into_params.rs  mod.rs  rpc_handler.rs  rpc_handler_wrapper.rs
crates/libs/lib-rpc/src/rpcs/: task_rpc.rs
crates/libs/lib-utils/: Cargo.toml
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: error.rs  main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_rpc.rs  routes_static.rs
crates/services/web-server/src/web/rpcs/: task_rpc.rs
crates/tools/gen-key/: Cargo.toml
crates/tools/gen-key/src/: main.rs
examples/: gen_key.rs  quick_dev.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  password.rs  token.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs
src/web/rpc/: mod.rs  task_rpc.rs
