[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
# -- Json
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
# -- Web
axum = "0.8.4"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-cookies = "0.11.0"
# -- Data
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
# -- Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# -- Others
strum_macros = "0.27.1"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10"
serial_test = "3.2.0"