[package]
name = "lib-auth"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
# -- Async
tokio = { version = "1.45.1", features = ["rt", "macros"] }
# -- Json
serde = { version = "1.0.219", features = ["derive"] }
# -- Hashing (pwd-scheme01 & Token)
hmac = "0.12.1"
sha2 = "0.10.9"
# -- Hashing (pwd-scheme02)
argon2 = { version = "0.5.3", features = ["std"] }
# -- Others
uuid = { version = "1.17.0", features = ["v4", "fast-rng", ] }
lazy-regex = "3.4.1"
derive_more = { version = "2.0.1", features = ["from"] }
enum_dispatch = "0.3.13"

[dev-dependencies]
anyhow = "1.0.98"
