[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
lib-auth = { path = "../../libs/lib-auth" }
# -- Async
tokio = { version = "1.45.0", features = ["full"] }
# -- Json
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["time_0_3"] }
# -- Data
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
sea-query = "0.32.5"
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres", "with-uuid", "with-time"] }
modql = { version = "0.4.1", features = ["with-sea-query"] }
# -- Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# -- Others
uuid = { version = "1.17.0", features = ["v4", "fast-rng", ] }
derive_more = { version = "2.0.1", features = ["from"] }

[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10"
serial_test = "3.2.0"
