[package]
name = "lib-rpc"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core" }
# -- Async
tokio = { version = "1.45.0", features = ["full"] }
futures = "0.3.31"
# -- Json
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
# -- Data
modql = { version = "0.4.1", features = ["with-sea-query"] }
# -- Others
derive_more = { version = "2.0.1", features = ["from"] }
