[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
lib-rpc = { path = "../../libs/lib-rpc" }
lib-auth = { path = "../../libs/lib-auth" }
lib-core = { path = "../../libs/lib-core" }
# -- Async
tokio = { version = "1.45.0", features = ["full"] }
# -- Json
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
# -- Web
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.4", features = ["fs"] }
tower-cookies = "0.11.0"
# -- Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# -- Others
uuid = { version = "1.17.0", features = ["v4", "fast-rng", ] }
strum_macros = "0.27.1"
derive_more = { version = "2.0.1", features = ["from"] }

[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10"
serial_test = "3.2.0"
